trunk/Archive2/9b/dd0af1734740d3/output
main.cpp:16:27: error: calling a private constructor of class 'test'
    std::cout << decltype(test().foo())::name() << std::endl;               // 1
                          ^
main.cpp:7:5: note: declared private here
    test() { }
    ^
1 error generated.
